force-app/main/default/objects/Library_System__x/Library_System__x.object-meta.xml
<CustomObject>
    <description>External object to connect with university library system</description>
    <externalDataSource>EduConnect_Library_System</externalDataSource>
    <externalName>library_resources</externalName>
    <externalRepository>EduConnect_Library_System</externalRepository>
    <label>Library Resource</label>
    <nameField>
        <complianceGroup>None</complianceGroup>
        <displayFormat>{0}</displayFormat>
        <externalId>true</externalId>
        <label>Resource ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Library Resources</pluralLabel>
</CustomObject>