force-app/main/default/objects/Library_System__x/fields/Available_Copies__c.field-meta.xml
<CustomField>
    <fullName>Available_Copies__c</fullName>
    <label>Available Copies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>