force-app/main/default/objects/Library_System__x/fields/ISBN__c.field-meta.xml
<CustomField>
    <fullName>ISBN__c</fullName>
    <externalId>true</externalId>
    <label>ISBN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>